--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 
  body {
     text-align: center;
-    background-image: url("images/1.JPG");
+    background-image: url("images/1.jpg");
     font-family: "Montserrat", sans-serif;
   }
 
