--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
+
 .fixed-top {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   z-index: 1030;
-}
-
-.fixed-top, .bottom {
   background-color: pink;
 }
 
@@ -33,19 +31,23 @@
   top: -60px;
 }
 
-.nav-link, .fa, .bottom, footer, #currentDay {
+.nav-link {
   color: #fff;
+  font-family: "Montserrat", sans-serif;
 }
 
-.nav-link:hover, .fa:hover, #counter {
+.nav-link:hover {
   color: peachpuff;
 }
 
-.nav-link, body {
-{
-  font-family: "Montserrat", sans-serif;
-
+.fa {
+  color: #fff;
 }
+
+.fa:hover {
+  color: peachpuff;
+}
+
 
 #spoiler {
   display: none;
@@ -57,7 +59,12 @@
 
  body {
     text-align: center;
-    background-image: url("images/1.JPG");
+    background-image: url("images/1.jpg");
+    font-family: "Montserrat", sans-serif;
+  }
+
+  .data {
+
   }
 
   .box {
@@ -84,9 +91,14 @@
   }
 
   #currentDay {
+    color: #fff;
     background: peachpuff;
     border-radius: 10px;
     padding: 5%;
+  }
+
+  #counter {
+    color: peachpuff;
   }
 
   table {
@@ -117,6 +129,8 @@
   }
 
   .bottom {
+    background-color: pink;
+        color: #fff;
         margin: 15% 5% 10%;
         border-radius: 5px;
         padding: 5%;
@@ -125,6 +139,7 @@
 
   footer {
     margin: 5%;
+    color: #fff;
   }
 
   /*Mobile media query*/
